--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
+    "firebase": "^4.12.1",
     "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
