--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
+    "react-native-contacts": "^2.1.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-swiper": "^1.5.13",
+    "react-native-unified-contacts": "^1.6.2",
     "react-navigation": "^1.5.11"
   }
 }
