--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
     "react-native-contacts": "^2.1.3",
+    "react-native-elements": "^0.19.1",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-swiper": "^1.5.13",
     "react-native-unified-contacts": "^1.6.2",
