--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
     "firebase": "^4.12.1",
@@ -30,8 +31,10 @@
     "react-native-contacts": "^2.1.3",
     "react-native-elements": "^0.19.1",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-searchbar": "^1.14.0",
     "react-native-swiper": "^1.5.13",
     "react-native-unified-contacts": "^1.6.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11"
   }
 }
