--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "apsl-react-native-button": "^3.1.0",
     "expo": "^26.0.0",
     "firebase": "^4.12.1",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
+    "react-native-calendar-datepicker": "^1.2.2",
     "react-native-contacts": "^2.1.3",
     "react-native-elements": "^0.19.1",
+    "react-native-modal": "^6.0.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-searchbar": "^1.14.0",
     "react-native-swiper": "^1.5.13",
