--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-modal": "^6.0.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-searchbar": "^1.14.0",
+    "react-native-swipeout": "^2.3.3",
     "react-native-swiper": "^1.5.13",
     "react-native-unified-contacts": "^1.6.2",
     "react-native-vector-icons": "^4.6.0",
