add facebook login, need to incorporate user into DB inputs/outputs

--- a/app.json
+++ b/app.json
@@ -3,6 +3,17 @@
   "displayName": "rtc-react-native",
   "expo":
     {
-      "sdkVersion": "26.0.0"
-    }
+      "sdkVersion": "26.0.0",
+    },
+  "facebookScheme":
+    {
+      "CFBundleURLTypes":
+      [
+          {
+            "CFBundleURLSchemes": ["fb140333090089093"],
+          }
+      ]
+    },
+    "FacebookAppID": "140333090089093",
+    "FacebookDisplayName": "Remember To Call",
 }
