--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.1",
     "jest-expo": "26.0.0",
+    "react-native-scripts": "1.13.1",
     "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -13,7 +13,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "rndebugger-open --expo"
   },
   "jest": {
     "preset": "jest-expo"
@@ -32,6 +33,7 @@
     "react-native-button-component": "^0.2.28",
     "react-native-calendar-datepicker": "^1.2.2",
     "react-native-contacts": "^2.1.3",
+    "react-native-debugger-open": "^0.3.17",
     "react-native-elements": "^0.19.1",
     "react-native-modal": "^6.0.0",
     "react-native-router-flux": "^4.0.0-beta.28",
