--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "26.0.0",
-    "react-native-scripts": "1.13.1",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "jest-expo": "27.0.0",
+    "react-native-scripts": "^1.14.1",
+    "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -22,14 +22,14 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "apsl-react-native-button": "^3.1.0",
-    "expo": "^26.0.0",
+    "expo": "^27.0.0",
     "expo-server-sdk": "^2.4.0",
     "firebase": "^4.12.1",
     "firebaseui": "^3.0.0",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0",
+    "react": "16.3.1",
+    "react-native": "^0.55.2",
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
     "react-native-calendar-datepicker": "^1.2.2",
@@ -37,7 +37,7 @@
     "react-native-debugger-open": "^0.3.17",
     "react-native-elements": "^0.19.1",
     "react-native-modal": "^6.0.0",
-    "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-router-flux": "^4.0.0-beta.32",
     "react-native-searchbar": "^1.14.0",
     "react-native-swipeout": "^2.3.3",
     "react-native-swiper": "^1.5.13",
@@ -48,6 +48,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "underscore": "^1.9.1",
+    "update": "^0.7.4"
   }
 }
