--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "react-native-swiper": "^1.5.13",
     "react-native-unified-contacts": "^1.6.2",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.12",
-    "react-navigation-redux-helpers": "^1.1.2",
+    "react-navigation": "^2.6.1",
+    "react-navigation-redux-helpers": "^2.0.0-beta.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
