--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
+    "react-devtools": "^3.2.3",
     "react-native": "^0.55.2",
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
