--- a/app.json
+++ b/app.json
@@ -1,29 +1,29 @@
 {
   "name": "rtc-react-native",
   "displayName": "rtc-react-native",
-  "expo":
-    {
-      "name": "Remember To Call",
-      "icon": "./src/assets/images/Icon.png",
-      "version": "0.1.0",
-      "slug": "remember-to-call",
-      "sdkVersion": "27.0.0",
-      "ios": {
-        "bundleIdentifier": "DeepCreations"
-      },
-      "android": {
-        "package": "com.remembertocall"
+  "expo": {
+    "name": "Remember To Call",
+    "icon": "./src/assets/images/Icon.png",
+    "version": "0.1.0",
+    "slug": "remember-to-call",
+    "sdkVersion": "27.0.0",
+    "ios": {
+      "bundleIdentifier": "DeepCreations"
+    },
+    "android": {
+      "package": "com.remembertocall"
+    },
+    "description": ""
+  },
+  "facebookScheme": {
+    "CFBundleURLTypes": [
+      {
+        "CFBundleURLSchemes": [
+          "fb140333090089093"
+        ]
       }
-    },
-  "facebookScheme":
-    {
-      "CFBundleURLTypes":
-      [
-          {
-            "CFBundleURLSchemes": ["fb140333090089093"],
-          }
-      ]
-    },
-    "FacebookAppID": "140333090089093",
-    "FacebookDisplayName": "Remember To Call",
+    ]
+  },
+  "FacebookAppID": "140333090089093",
+  "FacebookDisplayName": "Remember To Call"
 }
