made changes to function, updating all of git

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "android": {
       "package": "com.remembertocall"
     },
-    "description": ""
+    "description": "",
+    "githubUrl": "https://github.com/deepanjan1/rtc-react-native"
   },
   "facebookScheme": {
     "CFBundleURLTypes": [
