created null reminderlist slide, need to now create logic

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "android": {
       "package": "com.remembertocall"
     },
-    "description": "",
+    "description": "An app that helps you remember to reach out to your friends and family.  ",
     "githubUrl": "https://github.com/deepanjan1/rtc-react-native"
   },
   "facebookScheme": {
