--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-modal": "^6.0.0",
     "react-native-router-flux": "^4.0.0-beta.32",
     "react-native-searchbar": "^1.15.0",
+    "react-native-swipeable": "^0.6.0",
     "react-native-swipeout": "^2.3.3",
     "react-native-swiper": "^1.5.13",
     "react-native-unified-contacts": "^1.6.2",
