--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "apsl-react-native-button": "^3.1.0",
-    "expo": "^27.0.0",
+    "expo": "^29.0.0",
     "expo-server-sdk": "^2.4.0",
     "firebase": "^4.12.1",
     "firebaseui": "^3.0.0",
@@ -30,7 +30,7 @@
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-devtools": "^3.2.3",
-    "react-native": "^0.55.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
     "react-native-calendar-datepicker": "^1.2.2",
