app.json changes

--- a/app.json
+++ b/app.json
@@ -8,7 +8,10 @@
     "slug": "remember-to-call",
     "sdkVersion": "29.0.0",
     "ios": {
-      "bundleIdentifier": "DeepCreations"
+      "bundleIdentifier": "DeepCreations, LLC",
+      "infoPlist": {
+          "NSContactsUsageDescription": "We sync your contacts so you can create reminders.  We never reach out to your contacts!"
+        },
     },
     "android": {
       "package": "com.remembertocall"
