--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-contacts": "^2.1.3",
     "react-native-debugger-open": "^0.3.17",
     "react-native-elements": "1.0.0-beta5",
+    "react-native-fbsdk": "^0.7.0",
     "react-native-modal": "^6.0.0",
     "react-native-router-flux": "^4.0.0-beta.32",
     "react-native-searchbar": "^1.15.0",
