made changes to reminder and dashboard

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "expo": {
     "name": "Remember To Call",
     "icon": "./src/assets/images/Icon.png",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "slug": "remember-to-call",
     "sdkVersion": "29.0.0",
     "splash": {
@@ -16,9 +16,16 @@
       "infoPlist": {
           "NSContactsUsageDescription": "We sync your contacts so you can create reminders.  We never reach out to your contacts!"
         },
+      "config": {
+        "usesNonExemptEncryption": false,
+      },
     },
     "android": {
-      "package": "com.remembertocall"
+      "package": "com.remembertocall",
+      "splash": {
+        "image": "./src/assets/images/splash_logo.png",
+        "backgroundColor": "#ffffff"
+      },
     },
     "description": "An app that helps you remember to reach out to your friends and family.  ",
     "githubUrl": "https://github.com/deepanjan1/rtc-react-native"
