--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "apsl-react-native-button": "^3.1.0",
+    "exp": "^57.0.1",
     "expo": "^29.0.0",
     "expo-server-sdk": "^2.4.0",
     "firebase": "^4.12.1",
