--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "exp": "^57.0.1",
     "expo": "^29.0.0",
     "expo-server-sdk": "^2.4.0",
+    "expokit": "1.5.0",
     "firebase": "^4.12.1",
     "firebaseui": "^3.0.0",
     "moment": "^2.22.1",
@@ -35,6 +36,7 @@
     "react-native-addressbook": "^1.3.0",
     "react-native-button-component": "^0.2.28",
     "react-native-calendar-datepicker": "^1.2.2",
+    "react-native-code-push": "^5.4.2",
     "react-native-contacts": "^2.1.3",
     "react-native-debugger-open": "^0.3.17",
     "react-native-elements": "1.0.0-beta5",
