--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.1",
     "react-navigation-redux-helpers": "^2.0.0-beta.0",
+    "react-phone-input-2": "^2.6.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
