--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-elements": "1.0.0-beta5",
     "react-native-fbsdk": "^0.7.0",
     "react-native-modal": "^6.0.0",
+    "react-native-responsive-screen": "^1.1.9",
     "react-native-router-flux": "^4.0.0-beta.32",
     "react-native-searchbar": "^1.15.0",
     "react-native-swipeable": "^0.6.0",
